<resources>
    <string name="app_name">E-Commerce</string>
    <string name="sales_item">Sales</string>
    <string name="contacts_text">Заметки</string>
    <string name="about_text">Контакты</string>
    <string name="main_scene_text">Главное</string>
    <string name="logo_of_app_1">Флюгер</string>
    <string name="logo_of_app_2">App</string>
    <string name="course_start_date">Дата проверки:</string>
    <string name="course_level">Локация:</string>
    <string name="edit_text">Edit_text:</string>
    <string name="divide_zero">Нельзя делить на ноль!</string>
    <string name="null_data">Вы не заполнили все поля!</string>
    <string name="wrong_format">Проверьте корректность ввода данных</string>
    <string name="wrong_operation">Проверьте корректность ввода данных</string>
    <string name="input_first">Введите первый операнд</string>
    <string name="input_second">Введите второй операнд</string>
    <string name="input_operation">Введите операцию</string>
    <string name="calculate">Посчитать</string>
    <string name="result">Результат:</string>
    <string name="course_desc">Роспотребнадзор проверяет соответствие санитарным и эпидемиологическим нормам, например, наличие медкнижек у работников торгового объекта. Также ведомство контролирует качество потребительских товаров и услуг.</string>
</resources>